<resources>
    <string name="app_name">Quiz_Game_App</string>
    <string name="philippine_history_quiz">Philippine History Quiz</string>
    <string name="todo">TODO</string>
    <string name="historical_events_in_the_philippines">Historical events in the Philippines</string>
    <string name="select_a_category">Select a category</string>
    <string name="pilippine_american_war">Pilippine-American War</string>
    <string name="martial_law">Martial Law</string>
    <string name="start_now">Start Now</string>
    <string name="start_now1">Start Now</string>
    <string name="martial_law1">Martial Law</string>
    <string name="pilippine_american_war1">Pilippine-American War</string>
    <string name="select_a_category1">Select a category</string>
    <string name="philippine_history_quizz">Philippine History Quizz</string>
    <string name="press_to_start">Press to start</string>
    <string name="title_activity_quiz_us_vs_ph1">Quiz_US_VS_PH_1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="string_historical_events_in_the_philippines">\@string/historical_events_in_the_philippines</string>
    <string name="string_martial_law_in_the_philippines">\@string/martial_law_in_the_philippines</string>
    <string name="who_was_the_president_of_the_united_states_during_the_philippine_american_war">Who was the President of the United States during the Philippine-American War?</string>
    <string name="quiz_3">Quiz 3</string>
    <string name="time_00_00">Time: 00: 00</string>
    <string name="theodore_roosevelt">Theodore Roosevelt</string>
    <string name="william_mckinley">William McKinley</string>
    <string name="andrew_johnson">Andrew Johnson</string>
    <string name="woodrow_wilson">Woodrow Wilson</string>
    <string name="click_to_submit">Click to Submit</string>
    <string name="click_to_next_page">Click to next page</string>
    <string name="your_answer">Your answer:</string>
    <string name="treaty_of_paris_1898">Treaty of Paris (1898)</string>
    <string name="treaty_of_portsmouth_1905">Treaty of Portsmouth (1905)</string>
    <string name="treaty_of_tordesillas_1494">Treaty of Tordesillas (1494)</string>
    <string name="treaty_of_versailles_1919">Treaty of Versailles (1919)</string>
    <string name="quiz_4">Quiz 4</string>
    <string name="which_treaty_officially_ended_the_philippine_american_war_ceding_the_philippines_to_the_united_states">Which treaty officially ended the Philippine-American War, ceding the Philippines to the United States?</string>
    <string name="what_was_the_primary_reason_for_the_philippine_american_war_s_continuation_after_the_treaty_of_paris_was_signed">What was the primary reason for the Philippine-American War\'s continuation after the Treaty of Paris was signed?</string>
    <string name="quiz_5">Quiz 5</string>
    <string name="economic_disputes">Economic disputes</string>
    <string name="religious_conflicts">Religious conflicts</string>
    <string name="cultural_differences">Cultural differences</string>
    <string name="resistance_against_colonization">Resistance against colonization</string>
    <string name="title_activity_total_score_martial_easy">TotalScoreMartialEasy</string>
</resources>