<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Menu">

    <!-- This will set the background of the layout -->
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/history"
        tools:context=".Menu">

    <!-- This will set the size of the imageview
    and its properties -->


    <TextView
            android:text="@string/select_a_category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/historical_events_in_the_philippines" />

    <TextView
            android:text="@string/pilippine_american_war1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="316dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/historical_events_in_the_philippines" />

    <TextView
            android:text="@string/martial_law1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="760dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/historical_events_in_the_philippines" />

    <ImageView
            android:layout_width="389dp"
            android:layout_height="248dp"
            tools:srcCompat="@drawable/war"
            android:id="@+id/imageView2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/historical_events_in_the_philippines" />

    <Button
            android:text="@string/start_now1"
            android:layout_width="277dp"
            android:layout_height="61dp"
            android:id="@+id/button2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintVertical_bias="0.097" />

    <Button
            android:text="@string/start_now"
            android:layout_width="296dp"
            android:layout_height="67dp"
            android:id="@+id/button3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
            android:layout_width="322dp"
            android:layout_height="215dp"
            tools:srcCompat="@drawable/martialaw"
            android:id="@+id/imageView3"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/historical_events_in_the_philippines" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>